<resources>
    <string name="app_name">盾构+AI</string>
    <string name="Appkey">80225c0c4aec613620179379</string>
    <string name="Application_name">com.crec.shield.global.IstuaryGlobal</string>

    <string name="tv_help">帮助</string>
    <string name="front">字体设置</string>
    <string name="alarm">预警设置</string>
    <string name="about">关于</string>

    <string name="day_rank">今日排名</string>
    <string name="month_rank">最近30天排名</string>
    <string name="yestoday_rank">昨日排名</string>
    <string name="sevenday_rank">7日排名</string>

    <string name="guide_shift">导向偏移</string>
    <string name="source_of_risk">风险源</string>

    <string name="camera">实时视频</string>
    <string name="follow">关注项目</string>

    <string name="pro_quality_right">正常</string>
    <string name="pro_quality_error">异常</string>
    <string name="pro_camera_attention">您已经关注该摄像机!</string>
    <string name="pro_camera_attention_cancel">您已经取消关注该摄像机!</string>

    <string name="name">用户名</string>
    <string name="code">账 号</string>
    <string name="phone">手机号</string>
    <string name="user_setting">个人信息</string>
    <string name="message_setting">消息设置</string>
    <string name="messageSwitchOn">消息提醒开启</string>
    <string name="messageSwitchOff">消息提醒关闭</string>
    <string name="message_push">消息推送</string>
    <string name="messageOption">推送开关</string>
    <string name="undetermined">参数待定</string>
    <string name="moveSize">偏移量</string>
    <string name="risklevel">风险源等级</string>
    <string name="tv_gh">账号</string>
    <string name="tv_psw">密码</string>
    <string name="tv_feedback">反馈</string>
    <string name="tv_commit_info_config">提交信息确认</string>
    <string name="tv_commit">提交</string>
    <string name="tv_title">标题</string>
    <string name="tv_tel">联系电话</string>
    <string name="tv_content">反馈内容</string>
    <string name="login_succuss">登录成功</string>
    <string name="login_failure">用户名或密码错误</string>
    <string name="loading_message">加载中...</string>
    <string name="tv_feedback_notice">您输入的内容不完整,请补全.</string>
    <string name="tv_feedback_commit">反馈成功</string>

    <string name="config">确定</string>
    <string name="cancle">取消</string>
    <string name="look">账号：001002</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="error">异常</string>

    <string name="overview">总览</string>
    <string name="project">项目</string>
    <string name="message">消息</string>
    <!--<string name="exit">退出登录</string>-->


    <string name="no_clientid">(none)</string>
    <string name="start">已启动</string>
    <string name="clientid">clientid&#160;=&#160;</string>
    <string name="stop">已停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="transmit">透传内容</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
    <string name="bind_alias_success">绑定别名成功</string>
    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
    <string name="unbind_alias">解绑别名</string>
    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
    <string name="unbind_alias_success">取消绑定别名成功</string>
    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登陆成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="version">版本号</string>
    <string name="silentime">静默时间</string>
    <string name="getclientid">获取cid</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="appid">HcqYLRX8cuA849atPIBKf6</string>
    <string name="appkey">cuL5OzSRgeAvQwgkcqHBk8</string>
    <string name="appsecret">rTwdDiGpqB7OmVMaZEvpt5</string>
    <string name="mastersecret">AhxX0jh5WmAa5O9b7EIiS3</string>
    <string name="show_version">当前sdk版本&#160;=&#160;</string>
    <string name="show_cid">当前应用的cid&#160;=&#160;</string>
    <string name="set_silenttime">设置静默时间段</string>
    <string name="push_notification_title">通知栏测试</string>
    <string name="push_notification_msg_title">通知栏测试</string>
    <string name="push_notification_msg_content">您收到一条测试消息，点击访问</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string name="network_invalid">对不起，当前网络不可用!</string>


    // 盾构2.2
    <string name="bottom_main">首页</string>
    <string name="bottom_project">项目</string>
    <string name="bottom_message">消息</string>
    <string name="bottom_overview">项目概览</string>
    <string name="bottom_excavation">掘进数据</string>
    <string name="bottom_camera">视频数据</string>
    <string name="bottom_management">项目管理</string>
    <string name="bottom_personal">我的</string>

    <string name="risksourcedetail">风险源详情</string>
    <string name="home_page">首页</string>
    <string name="riskname">风险名称:</string>
    <string name="risk_level">风险等级:</string>
    <string name="effect_ringnumber">影响环号:</string>
    <string name="riskdistance">风险里程:</string>
    <string name="environment_approach_relation">环境接近关系:</string>
    <string name="feedback_state">反馈状态:</string>
    <string name="introduction_of_riskevents">风险事件说明:</string>
    <string name="major_riskandconsequences">主要风险及后果:</string>
    <string name="risk_picture">风险图片:</string>
    <string name="feedback_people">反馈人:</string>
    <string name="feedback_time">反馈时间:</string>

    <string name="progress_management">进度管理</string>
    <string name="safety_management">安全管理</string>
    <string name="equipment_management">设备管理</string>
    <string name="quality_management">质量管理</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>

</resources>
