<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_overview"
        android:enabled="true"
        android:icon="@drawable/project_bottom_overview"
        android:title="@string/bottom_overview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_excavation"
        android:enabled="true"
        android:icon="@drawable/project_bottom_excavation"
        android:title="@string/bottom_excavation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_camera"
        android:enabled="true"
        android:icon="@drawable/project_bottom_camera"
        android:title="@string/bottom_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_management"
        android:enabled="true"
        android:icon="@drawable/project_bottom_management"
        android:title="@string/bottom_management"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_personal"
        android:enabled="true"
        android:icon="@drawable/project_bottom_personal"
        android:title="@string/bottom_personal"
        app:showAsAction="ifRoom" />

</menu>