<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!--标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/radio"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/back_white" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/risksourcedetail"
            android:textColor="@color/title_bg"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/home_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/home_page"
            android:textSize="14sp"
            android:textColor="@color/title_bg"/>
    </LinearLayout>
    <!--下方页面-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">           <!--页面滑动-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <!--风险名称-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/riskname"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp"
                     />
                <TextView
                    android:id="@+id/risk_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp"
                     />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_height="1dp"
                android:background="@color/line_gray" />
            <!--风险等级-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/risk_level"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/risk_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--影响环号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/effect_ringnumber"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/effect_ring_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--风险里程-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/riskdistance"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/risk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--环境临近关系-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/environment_approach_relation"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/risk_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--反馈状态-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/feedback_state"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/feed_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--风险事件说明-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/introduction_of_riskevents"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/risk_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/text_light_color"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--主要风险及后果-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/major_riskandconsequences"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/risk_consequence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/text_light_color"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--风险图片-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/risk_picture"
                    android:textColor="@color/text_com_color"
                    android:textSize="16dp" />
                <!--轮播图-->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/vp_risk_image"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:padding="4dp" />
                    <LinearLayout
                        android:id="@+id/dot_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="32dp"
                        android:gravity="center"
                        android:orientation="horizontal" />
                </FrameLayout>
            </LinearLayout>
            <!--反馈人-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/feedback_people"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/feed_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="7dp"
                android:background="@color/line_gray" />
            <!--反馈时间-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/feedback_time"
                    android:textColor="@color/text_com_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/greate_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/green_gray"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>