<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-2dp"
    android:orientation="vertical">
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">
    <LinearLayout
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView3"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="8dp"
                android:text="各项目统计掘进工效排名"
                android:textColor="@color/font_black"
                android:textSize="@dimen/sp16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/line_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center">
                <Button
                    android:id="@+id/propel_yestoday"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/rankbtn_shape_unselected"
                    android:text="@string/yestoday_rank"
                    android:textColor="@color/font_black"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/propel_day"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/rankbtn_shape_selected"
                    android:text="@string/day_rank"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/propel_sevenday"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/rankbtn_shape_unselected"
                    android:text="@string/sevenday_rank"
                    android:textColor="@color/font_black"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/propel_month"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/rankbtn_shape_unselected"
                    android:text="@string/month_rank"
                    android:textColor="@color/font_black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/propelRankNULL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:textColor="@color/color_Aluminum"
                            android:visibility="gone" />

                        <WebView
                            android:id="@+id/propel_rank"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</RelativeLayout>